# EuroSymulation

./: Ball.cpp  Ball.h  CMakeLists.txt  CheckBoundaries.cpp  CheckBoundaries.h  Field.cpp  Field.h  Footballer.cpp  Footballer.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Team.cpp  Team.h  main.cpp
